--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <title> Explore Your Options</title>
 
     <link href="https://fonts.googleapis.com/css?family=Assistant:200,300,400" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link rel="stylesheet" type="text/css" href="grid.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
@@ -24,7 +26,7 @@
     <nav class="navigation navbar-fixed-top">
         <ul>
             <li class="left">
-                <a href="#"><i class="fa fa-road" aria-hidden="true"></i> Explore Your Options</a>
+                <a href="#"><i class="fab fa-fly" aria-hidden="true"></i> Explore Your Options</a>
             </li>
         </ul>
         <div class="sm-view">
@@ -55,14 +57,47 @@
     </nav>
     <section class="how-it-works">
         <div class="how-it-works-title">
-            <h1> How it Works </h1>
+            <h1>How it Works</h1>
+        </div>
+        <div class="row">
+        <div class="col-6 category">
+            <p class="title"> Search Careers</p>
+            </div>
+        <div class="col-6 details">
+
+            <p> search by career and location to return:</p>
+            <ul>
+                <li>national median salary</li>
+                <li>local median salary</li>
+                <li>education required</li>
+                <li>number of years of experience</li>
+            </ul>
+        </div>
+        </div>
+        <div class="row">
+            <div class="col-6 category">
+                <p class="title"> Search Colleges</p>
+            </div>
+            <div class="col-6 details">
+                <p> search colleges by degree, speciality and location to return:</p>
+                <ul>
+                    <li> average cost</li>
+                    <li> average debt</li>
+                    <li> average salaray 10 years after graduation</li>
+                    <li> program and cost details </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6 category">
+                <p class="title"> Compare</p>
+            </div>
+            <div class="col-6 details">
+                <p> compare colleges against desires career and calculate return on investment.</p>
+            </div>
         </div>
     </section>
-    <section class="my-trips">
-        <h1> My Hikes</h1>
-        <div class="trips-list">
-        </div>
-    </section>
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="client.js"></script>
