manipulation clean up

--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,7 @@
             </div>
     </section>
     <section class="college-results">
-        <h1> Search Results </h1>
+        <!-- <h1> Search Results </h1> -->
 <!--         <div class="row">
             <div class="col-3">
                 <p><span class="heavy emphasis">Duke University</span><br><span class="light"> Durham, NC</span></p>
@@ -338,14 +338,14 @@
         </div> -->
     </section>
     <section class="comparison">
-        <div class="row">
+<!--         <div class="row">
             <div class="col-6 star-img right">
             </div>
             <div class="col-6">
                 <p><span class="light">as a </span><span class="heavy emphasis orange">developer</span><br><span class="light"> attending</span><span class="heavy emphasis orange"> duke</span></p>
                 <p><span class="light"> return on investment over 20 years: </span><br><span class="heavy emphasis orange">$200,000</span></p>
             </div>
-        </div>
+        </div> -->
     </section>
 
 <div id="myModal" class="modal">
