small node updates

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
 <body>
 
 
-    <header class="header-image">
-    </header>
+    <div class="header-image">
+    </div>
     <header class="header-intro">
         <div class="header-text">
             <h1> Explore Your Options </h1>
